@@ -313,5 +313,9 @@ Dist::Zilla::Plugin::Prereqs::MatchInstalled = 0
 Dist::Zilla::Plugin::ModuleBuild = 0
 Dist::Zilla::Plugin::Git::NextVersion::Sanitized = 0
 Module::Build = 0
+Dist::Zilla::Plugin::Author::KENTNL::TravisCI = 0
 
 [CheckPrereqsIndexed]
+
+[Author::KENTNL::TravisCI]
+skip_perls = 5.8
