@@ -1,6 +1,9 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 2.022004
+ [Added / test requires]
+ - Dist::Zilla::Plugin::Author::KENTNL::TravisCI
+
  [Changed / runtime requires]
  - Dist::Zilla::Plugin::MetaData::BuiltWith 1.004000 → 1.004001
  - Dist::Zilla::Util::CurrentCmd 0.002001 → 0.002002
