@@ -3,8 +3,13 @@
 {{$NEXT}}
  [Dependencies::Stats]
  - Dependencies changed since 2.022003, see misc/*.deps* for details
- - develop: ↑1
+ - develop: +1 ↑1
  - runtime: ↑4
+ - test: +1
+
+ [Minor]
+ - use new travis generator
+ - inject new travis generator into new dists
 
 2.022003 2014-12-29T11:33:17Z c7a0caa
  [Dependencies::Stats]
